--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 dj-database-url==0.5.0
 Django==2.0.3
 django-mathfilters==0.4.0
+Pillow==5.0.0
 pkg-resources==0.0.0
+psycopg2==2.7.4
 python-decouple==3.1
 pytz==2018.3
 whitenoise==3.3.1
