--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,33 @@
+certifi==2018.1.18
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==0.5.0
 Django==2.0.3
+django-crispy-forms==1.7.2
 django-heroku==0.3.1
+django-markdown-deux==1.0.5
 django-mathfilters==0.4.0
+django-pagedown==1.0.4
+django-rest-swagger==2.1.2
+djangorestframework==3.8.0
+djangorestframework-jwt==1.11.0
 gunicorn==19.7.1
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+markdown2==2.3.5
+MarkupSafe==1.0
+openapi-codec==1.3.2
 Pillow==5.0.0
+pkg-resources==0.0.0
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
+PyJWT==1.6.1
 python-decouple==3.1
 pytz==2018.3
+requests==2.18.4
+simplejson==3.13.2
+uritemplate==3.0.0
+urllib3==1.22
 whitenoise==3.3.1
